fixed product borders and row alignment

--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,29 @@ body {
     font-weight: 500;
 }
 
+.products {
+    display: flex;   /* line up children horizontally */
+    gap: 16px;       /* space between cards */
+    flex-wrap: wrap; /* make them wrap when users window is too small*/
+}
+
+.item {
+    border: 5px solid black;
+    border-radius: 10px;
+    padding: 12px;
+    margin: 1px;
+    width: 260px;
+    flex: auto;
+    gap: 10px;
+}
+
+.item img {
+    width: 300px;
+    height: auto;
+    display: block;
+    margin: auto;
+}
+
 p {
     font-family: sans-serif;
 }
